public interface IHerbivora {
    public void displayMakan();
}