public interface IKarnivora {
    public void displayMakan();
}